--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "firebase": "^12.2.1",
+    "firebase-admin": "^12.7.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
