--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "firebase": "^12.2.1",
     "firebase-admin": "^12.7.0",
     "next": "15.5.2",
