--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@videojs/http-streaming": "^3.17.2",
     "firebase": "^12.2.1",
     "firebase-admin": "^12.7.0",
-    "next": "15.5.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^15.5.7",
+    "react": "^19.1.2",
+    "react-dom": "^19.1.2",
     "react-player": "^3.4.0",
     "video.js": "^8.23.4"
   },
@@ -33,7 +33,7 @@
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^5.1.0",
     "eslint": "^9",
-    "eslint-config-next": "15.5.2",
+    "eslint-config-next": "^15.5.7",
     "jsdom": "^27.1.0",
     "tailwindcss": "^4",
     "typescript": "^5",
